objects/TEX__c.object
<CustomObject>
    <fields>
        <fullName>AffectedOffer__c</fullName>
        <label>Affected Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentComments__c</fullName>
        <label>Assessment Conclusions Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentType__c</fullName>
        <description>I2P-RR:OCT2013RELEASE
Remote analysis - data for TEX can be collected from customer without need for expert intervention or to send back product 
Expert Assessment On site - expert needs to be sent to customer site 
Product Return to Expert Center - all other cases</description>
        <inlineHelpText>REMOTE ANALYSIS : data for TEX can be collected from customer without need for expert intervention or to send back product.   
ASSESSMENT ON SITE : expert needs to be sent to customer site.             
PRODUCT RETURN TO EXPERT CENTER : all other cases.</inlineHelpText>
        <label>Assessment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remote Expert Assessment</fullName>
                </value>
                <value>
                    <fullName>Expert Assessment on Site</fullName>
                </value>
                <value>
                    <fullName>Product Return to Expert Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSeverity__c</fullName>
        <formula>IF(ISBLANK(Case__c),&apos;&apos;, TEXT( Case__r.Severity__c ))</formula>
        <label>Case Severity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Technical Expert Assessments</relationshipLabel>
        <relationshipName>TEXS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <description>I2P-RR:OCT2013RELEASE</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communicationfrequency__c</fullName>
        <description>I2P April Release : This was an existing picklist field which was changed to multi-select picklist under BR-8820</description>
        <inlineHelpText>Frequency of communication expected by the customer. If you select the &apos;Milestones&apos; option the user should be notified on product reception at the expert center, on start of the assessment and when the report is sent to the final customer.</inlineHelpText>
        <label>Communication frequency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Milestones</fullName>
                </value>
                <value>
                    <fullName>Only if Delay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>&lt;Confirm&gt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CustomerPreferredLanguage__c</fullName>
        <inlineHelpText>If this field is blank automatic emails to customer will be sent using the English email templates.</inlineHelpText>
        <label>Customer Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Serbian</fullName>
                </value>
                <value>
                    <fullName>Slovak</fullName>
                </value>
                <value>
                    <fullName>Slovenian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPreferredchannel__c</fullName>
        <label>Customer Preferred channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerWait__c</fullName>
        <formula>iF(AND( ISPICKVAL(Status__c, &quot;Closed&quot;), NOT(ISNULL(ClosedDate__c) ) ),ClosedDate__c - DATEVALUE(Case__r.CreatedDate),IF(NOT(ISPICKVAL(Status__c, &quot;Closed&quot;)), today() - DATEVALUE(Case__r.CreatedDate) , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateofReportofDelivery__c</fullName>
        <label>Date of  Report Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysSpentOnAssessment__c</fullName>
        <formula>iF(
NOT(ISNULL(ClosedDate__c) ),
ClosedDate__c- OpenDate__c ,
today() - OpenDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Spent On Assessment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalationDate__c</fullName>
        <formula>IF(  OR( NOT(ISBLANK(UpdatedPromiseDate__c)) , NOT(ISNULL(UpdatedPromiseDate__c)) )  , UpdatedPromiseDate__c,  IF( OR(NOT(ISBLANK( PromiseDate__c ) ), NOT(ISNULL(PromiseDate__c ))) , PromiseDate__c , ( OpenDate__c +  VALUE($Label.CLOCT15I2P08) )) )</formula>
        <label>Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpertAssessmentCompleted__c</fullName>
        <label>Expert Assessment Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpertAssessmentReviewed__c</fullName>
        <label>Expert Assessment Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpertAssessmentStarted__c</fullName>
        <label>Expert Assessment Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpertAssessmentTemplates__c</fullName>
        <formula>Hyperlink(&quot;https://schneider-electric.box.com/s/77ckjp1yftpxd4tr1r3p&quot;,&quot;Expert Assessment Templates&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Expert Assessment Templates&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterAdditionalInformation__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCAdditionalInformation__c)</formula>
        <label>Expert Center - Additional Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterCity__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCCity__c)</formula>
        <label>Expert Center - City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterContactEmail__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.ContactEmail__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expert Center - Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterContactName__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCContactName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expert Center - Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterCountry__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCCountry__r.Name )</formula>
        <label>Expert Center - Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterCounty__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCCounty__c)</formula>
        <label>Expert Center - County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterFax__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCFax__c)</formula>
        <label>Expert Center - Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterLocalAdditionalInfo__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCAdditionalInformationLocal_Language__c)</formula>
        <label>Expert Center - Local Additional Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterLocalCity__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCLocalCity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expert Center - Local City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterLocalCounty__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCLocalCounty__c)</formula>
        <label>Expert Center - Local County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterLocalStreet__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCStreetLocalLanguage__c)</formula>
        <label>Expert Center - Local Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterPOBoxZipCode__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCPOBoxZipCode__c)</formula>
        <label>Expert Center - PO Box Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterPOBox__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCPOBox__c)</formula>
        <label>Expert Center - PO Box</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterPhone__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCPhone__c)</formula>
        <label>Expert Center - Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterStateProvince__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCStateProvince__r.Name)</formula>
        <label>Expert Center - State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterStreet__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.Street__c)</formula>
        <label>Expert Center - Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenterZipCode__c</fullName>
        <formula>IF(ISNULL(ExpertCenter__c),null, ExpertCenter__r.RCZipCode__c)</formula>
        <label>Expert Center - Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertCenter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Expert Center</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 4) OR (1 AND 7 AND 6) OR ((2 OR 3) AND 5)</booleanFilter>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Customer Care Center</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Closed</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Cancelled</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>To be deactivated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Technical Expert Assessments (Expert Center.)</relationshipLabel>
        <relationshipName>Technical_Expert_Assessments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FailingComponent__c</fullName>
        <description>Identify the component which is failing in the system.</description>
        <inlineHelpText>Identify the component which is failing in the system.</inlineHelpText>
        <label>Failing Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No failing component</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Arc chamber</fullName>
                </value>
                <value>
                    <fullName>Auxiliary board</fullName>
                </value>
                <value>
                    <fullName>Button / Switch</fullName>
                </value>
                <value>
                    <fullName>Capacitor</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>Circuit breaker / Trip unit / Relay</fullName>
                </value>
                <value>
                    <fullName>Connectors / Lugs</fullName>
                </value>
                <value>
                    <fullName>Contact / Coil</fullName>
                </value>
                <value>
                    <fullName>CPU / Processor</fullName>
                </value>
                <value>
                    <fullName>Current path / Wiring</fullName>
                </value>
                <value>
                    <fullName>Display / Indicator</fullName>
                </value>
                <value>
                    <fullName>Documentation / Instructions</fullName>
                </value>
                <value>
                    <fullName>Electronic component</fullName>
                </value>
                <value>
                    <fullName>Firmware</fullName>
                </value>
                <value>
                    <fullName>Handle</fullName>
                </value>
                <value>
                    <fullName>Inverter</fullName>
                </value>
                <value>
                    <fullName>Labels / Name plates</fullName>
                </value>
                <value>
                    <fullName>Magnetics</fullName>
                </value>
                <value>
                    <fullName>Main board</fullName>
                </value>
                <value>
                    <fullName>Mechanical component</fullName>
                </value>
                <value>
                    <fullName>Memory</fullName>
                </value>
                <value>
                    <fullName>Motor</fullName>
                </value>
                <value>
                    <fullName>Mounting feet / Guides</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>PLC</fullName>
                </value>
                <value>
                    <fullName>Power supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FailureMode__c</fullName>
        <description>Identify the mode in which the above component is failing.</description>
        <inlineHelpText>Identify the mode in which the above component is failing.</inlineHelpText>
        <label>Failure Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Aspect</fullName>
                </value>
                <value>
                    <fullName>Dimension</fullName>
                </value>
                <value>
                    <fullName>Function</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Thermal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No fault found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <formula>IF( ISBLANK( Case__c ) ,&apos;&apos;,  Case__r.Family__c)</formula>
        <label>Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForceManualSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Manual Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FrontOfficeOrganization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>I2P: APRIL 2014 RELEASE</description>
        <label>Front Office Organization</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 4) OR (1 AND 7 AND 6) OR ((2 OR 3) AND 5)</booleanFilter>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Customer Care Center</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Closed</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Cancelled</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>To be deactivated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Technical Expert Assessments (Front Office Organization)</relationshipLabel>
        <relationshipName>Technical_Expert_Assessments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FrontOfficeTEXManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Front Office TEX Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Expert_Assessments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FrontOfficeTEXReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Front Office TEX Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Expert_Assessments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastNotificationDay__c</fullName>
        <label>Last Notification Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastUpdated__c</fullName>
        <description>June 2016 Release - BR-7799</description>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastUpdatedby__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>June 2016 Release - BR-7799</description>
        <label>Last Updated by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Expert_Assessments5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LatestPromiseDate__c</fullName>
        <formula>If(ISNULL(UpdatedPromiseDate__c),  PromiseDate__c,UpdatedPromiseDate__c  )</formula>
        <label>Latest Promise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LineofBusiness__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>I2P Oct 15 Release</description>
        <label>Line of Business</label>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Technical Expert Assessments (Line of Business)</relationshipLabel>
        <relationshipName>Technical_Expert_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManualExpertCenterOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Expert Center Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_Status__c</fullName>
        <label>Material Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Transit to Expert Center</fullName>
                </value>
                <value>
                    <fullName>Partially delivered to Expert Center</fullName>
                </value>
                <value>
                    <fullName>Delivered to Expert Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseId__c</fullName>
        <description>This field is used by Odaseva archiving solution in order to store the case id of archived cases. Required in 18-char format</description>
        <externalId>true</externalId>
        <label>OdasevaArchivedCaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseNumber__c</fullName>
        <label>OdasevaArchivedCaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseURL__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(OdasevaArchivedCaseId__c)),NOT(ISBLANK(OdasevaArchivedCaseNumber__c))),HYPERLINK($Label.OdasevaArchivedCaseUrlPrefix &amp; OdasevaArchivedCaseId__c, OdasevaArchivedCaseNumber__c),&quot;No archived case to display&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Odaseva Archived Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferExpert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diagnostic Expert</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Expert_Assessments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpenDate__c</fullName>
        <description>I2P-RR:OCT2013RELEASE</description>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parts_Order_Line_Return_Center__c</fullName>
        <description>R1 release : Text field to copy Return Center of Parts Order Line</description>
        <label>Parts Order Line Return Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialSafetyIssue__c</fullName>
        <formula>IF(  TECH_CSIFlag__c ==true, IMAGE(&quot;/resource/CSIIcon&quot;,&quot;CSI&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Potential Safety Issue&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorityReason__c</fullName>
        <label>Priority Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prioritylevel__c</fullName>
        <description>I2P-RR:OCT2013RELEASE</description>
        <inlineHelpText>Safety Related requests must be taken as top priority, followed by VIP Customer requests. Rest of Customer request shall be prioritize based on Risk Priority Number (severity, occurrence, detection)</inlineHelpText>
        <label>Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Serious</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <formula>IF( ISBLANK( Case__c ) ,&apos;&apos;, Case__r.ProductFamily__c)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_BU__c</fullName>
        <formula>IF( ISBLANK( Case__c ) ,&apos;&apos;,  Case__r.ProductBU__c)</formula>
        <label>Product BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>IF( ISBLANK( Case__c ) ,&apos;&apos;, Case__r.ProductLine__c)</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromiseDate__c</fullName>
        <description>Customer promise Date
Date in which we promised to provide the final report to the customer. Take into account both the product shipping time and the expert assessment time</description>
        <inlineHelpText>Date in which we promised to provide the final report to the customer. Take into account the product shipping time, the expert assessment time and the Front Office review time.</inlineHelpText>
        <label>Promise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QualityContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TECH_Quality Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Expert_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REPDaysFromCaseToTEXCreation__c</fullName>
        <formula>OpenDate__c - DATEVALUE(Case__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REP_Days from Case to TEX creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPDaysFromCompletedToReviewed__c</fullName>
        <formula>ExpertAssessmentReviewed__c - ExpertAssessmentCompleted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REP_Days from Completed to Reviewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPDaysFromDeliveredToClosed__c</fullName>
        <formula>ClosedDate__c - TEXReportDeliveredtoCustomer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REP_Days from Delivered to Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPDaysFromOpenToClose__c</fullName>
        <formula>ClosedDate__c - OpenDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REP_Days from Open to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPDaysFromOpenToStarted__c</fullName>
        <formula>ExpertAssessmentStarted__c - OpenDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REP_Days from Open to Started</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPDaysFromReviewedToDelivered__c</fullName>
        <formula>TEXReportDeliveredtoCustomer__c - ExpertAssessmentReviewed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REP_Days from Reviewed to Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPDaysFromStartedToCompleted__c</fullName>
        <formula>ExpertAssessmentCompleted__c - ExpertAssessmentStarted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REP_Days from Started to Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_ExpertCenter__c</fullName>
        <formula>ExpertCenter__c</formula>
        <label>REP Expert Center Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_FrontOfficeOrganization__c</fullName>
        <formula>FrontOfficeOrganization__c</formula>
        <label>REP Front Office Organization Id</label>
        <type>Text</type>
    </fields>
</CustomObject>